Update project name and modify debug settings in configuration files
- Changed the project name in wrangler.jsonc from "sse-router-experiment" to "cloudflare-sse-datastar" for better alignment with the project's purpose.
- Updated the debug setting in public/index.html from true to false to prevent unnecessary logging in the production environment.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "sse-router-experiment",
+	"name": "cloudflare-sse-datastar",
 	"compatibility_date": "2025-05-09",
 	"main": "src/index.ts",
 	"assets": {
